add downscale settings

--- a/FTPSchubser/App.config
+++ b/FTPSchubser/App.config
@@ -43,8 +43,14 @@
             <setting name="prompt_overwrite" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="UpgradeTo2102" serializeAs="String">
+            <setting name="UpgradeTo2200" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="downscale" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="downscale_size" serializeAs="String">
+                <value>1024</value>
             </setting>
         </FTPSchubser.Properties.Settings>
     </userSettings>
