add settings file

--- a/src/FTPSchubser/FTPSchubser/App.config
+++ b/src/FTPSchubser/FTPSchubser/App.config
@@ -1,6 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="FTPSchubser.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <FTPSchubser.Properties.Settings>
+            <setting name="host" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="port" serializeAs="String">
+                <value>21</value>
+            </setting>
+            <setting name="user" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="password" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="pasv" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="folder" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="clipboard" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="shorten" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="url" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="prompt_overwrite" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="upgradeTo3000" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </FTPSchubser.Properties.Settings>
+    </userSettings>
 </configuration>
