--- a/src/FTPSchubser/FTPSchubser/FTPSchubser.csproj
+++ b/src/FTPSchubser/FTPSchubser/FTPSchubser.csproj
@@ -63,6 +63,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Helper\FTPHelper.cs" />
+    <Compile Include="Helper\URLHelper.cs" />
+    <Compile Include="Helper\Utils.cs" />
+    <Compile Include="Helper\ZIPHelper.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
