--- a/src/FTPSchubser/App.config
+++ b/src/FTPSchubser/App.config
@@ -40,8 +40,14 @@
             <setting name="prompt_overwrite" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="upgradeTo3000" serializeAs="String">
+            <setting name="RequireUpgrade" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="keep_window_open" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="password_secure" serializeAs="String">
+                <value />
             </setting>
         </FTPSchubser.Properties.Settings>
     </userSettings>
