--- a/src/FTPSchubser/Properties/Settings.settings
+++ b/src/FTPSchubser/Properties/Settings.settings
@@ -32,8 +32,14 @@
     <Setting Name="prompt_overwrite" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="upgradeTo3000" Type="System.Boolean" Scope="User">
+    <Setting Name="RequireUpgrade" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="keep_window_open" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="password_secure" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
