add zip support

--- a/src/FTPSchubser/FTPSchubser.csproj
+++ b/src/FTPSchubser/FTPSchubser.csproj
@@ -57,6 +57,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helper\UploadFile.cs" />
     <Compile Include="Helper\SecureStringHelper.cs" />
     <Compile Include="Helper\SettingsHelper.cs" />
     <Compile Include="SettingsWindow.xaml.cs">
